--- a/cnn_train.tex
+++ b/cnn_train.tex
@@ -1,5 +1,5 @@
 \chapter{Training process of Convolutional Neural Networks}\label{ch:cnn_train}
-Three Convolutional Neural Networks (CNNs) were trained throughout this analysis. There are differences to each CNN and will be described fully in the next sections but the main difference are the amount of particle images used for training and validation. CNN1075 used 1,075 muons and 1,075 pions for training and the same amout of each particle for validation. CNN10000 used 10,000 muons and 10,000 pions split in half for testing and training. Lastly CNN100000 had muons, pions, protons, electrons, and gammas in it's training and validation set. Each particle had 20,000 images and training and validation was split $90\%$ training, $10\%$ validation. This chapter will also describe the different hardware frameworks used for training beginning on a CPU and ending on a GPU cluster. 
+Three Convolutional Neural Networks (CNNs) were trained throughout this analysis. There are differences to each CNN and will be described fully in the next sections but the main difference are the amount of particle images used for training and validation. CNN1075 used 1,075 muons and 1,075 pions for training and the same amount of each particle for validation. CNN10000 used 10,000 muons and 10,000 pions split in half for testing and training. Lastly CNN100000 had muons, pions, protons, electrons, and gammas in it's training and validation set. Each particle had 20,000 images and training and validation was split $90\%$ training, $10\%$ validation. This chapter will also describe the different hardware frameworks used for training beginning on a CPU and ending on a GPU cluster. 
 
 
 %\section{Hardware Frameworks used for Training}
@@ -8,7 +8,7 @@ Three Convolutional Neural Networks (CNNs) were trained throughout this analysis
 
 
 \section{Hardware Configurations for Convolutional Neural Network Training}\label{research approach}
-The first training iteration, CNN1075, was a proof of concept. This CNN was trained on my local machine for \sim 4-5 weeks. The batch size had to be very small as well as the image size due to the lack of compuation resources. The second iteration of training, CNN10000, was trained on a Fermilab stationed Syracuse University machine. This machine had 6 TB of disk space, 6 cores at 2.1 GHz and 32 GB of RAM. The use of this machine allowed me to increase the training sample as well as the batch size and hence further increase the accuracy of the neural network. Lastly, the CNN100000 was trained using two GTX 1080 Ti GPUs with 11GB of memory on a node on the Syracuse University GPU cluster, SUrge, that has 8 cores and 16GB of memory. This increase in memory as well as the capability to use 2 GPUs drastically cut down on training time from \sim 4-5 weeks to \sim 8 hours. SUrge also allowed for hyperparameter optimization by being able to run mulitple training iterations over the two GPUs. Lastly, SUrge allowed for training over higher resolution images and a larger particle class of 5 particles vs 2 particles. 
+The first training iteration, CNN1075, was a proof of concept. This CNN was trained on my local machine for \sim 4-5 weeks. The batch size had to be very small as well as the image size due to the lack of computation resources. The second iteration of training, CNN10000, was trained on a Fermilab stationed Syracuse University machine. This machine had 6 TB of disk space, 6 cores at 2.1 GHz and 32 GB of RAM. The use of this machine allowed me to increase the training sample as well as the batch size and hence further increase the accuracy of the neural network. Lastly, the CNN100000 was trained using two GTX 1080 Ti GPUs with 11GB of memory on a node on the Syracuse University GPU cluster, SUrge, that has 8 cores and 16GB of memory. This increase in memory as well as the capability to use 2 GPUs drastically cut down on training time from \sim 4-5 weeks to \sim 8 hours. SUrge also allowed for hyperparameter optimization by being able to run multiple training iterations over the two GPUs. Lastly, SUrge allowed for training over higher resolution images and a larger particle class of 5 particles vs 2 particles. 
 
 \section{Creating images using LArTPC data for training/validation of CNNS}\label{image_making}
 The $\mu/\pi$ image dataset used to train and validate CNN1075 was created using single generated isotropic muons and pions from 0-2 GeV energy range. 2,150 muons and 2,150 pions were used for training and testing split 50\%. The images were created using LArSoft, a liquid argon software, and were based on wire number and time tick in the collection plane. Uboonecode reconstruction version v05{\_}08{\_}00 was used. The raw ADC value after noise filtering was the wire signal. Each collection plane greyscale image was 3456x1600x1 where 6 time ticks were pooled into 1 bin. 
@@ -105,7 +105,7 @@ The hyperparameters used for CNN10000 are shown below. The batch size for the tr
 \label{fig:loss_accuracy}
 \end{figure}
 
-The same architecure that was used to train CNN1075 was employed on CNN10000, AlexNet. Caffe \cite{caffe} was the software package used for both CNNs. The differences include batch size and test{\_}iter and momentum to account for the larger dataset. Figure \ref{fig:loss_accuracy} shows the loss and accuracy of CNN10000. There is around a 10\% increase in accuracy from CNN1075 to CNN10000, 85\%, and around a 20\% decrease in loss, 36\%.
+The same architecture that was used to train CNN1075 was employed on CNN10000, AlexNet. Caffe \cite{caffe} was the software package used for both CNNs. The differences include batch size and test{\_}iter and momentum to account for the larger dataset. Figure \ref{fig:loss_accuracy} shows the loss and accuracy of CNN10000. There is around a 10\% increase in accuracy from CNN1075 to CNN10000, 85\%, and around a 20\% decrease in loss, 36\%.
 
 \begin{figure}[htp!]
 \centering
@@ -121,7 +121,7 @@ The same architecure that was used to train CNN1075 was employed on CNN10000, Al
 	\label{fig:confusion_test}
 	\end{subfigure}
 	\quad
-\caption{Description of confusion matrix varables: False pion rate = $false \pi/ total \pi$ True pion rate = $true \pi/total \pi$ Accuracy = $(true \pi rate + true \mu rate)/2$ Pion prediction value = $true \pi/(true \pi + false \pi)$ Muon prediction value = $true \mu/(true \mu + false \mu)$}
+\caption{Description of confusion matrix variables: False pion rate = $false \pi/ total \pi$; True pion rate = $true \pi/total \pi$; Accuracy = $(true \pi rate + true \mu rate)/2$; Pion prediction value = $true \pi/(true \pi + false \pi)$; Muon prediction value = $true \mu/(true \mu + false \mu)$}
 \label{fig:CNN_train}
 \end{figure}
 \begin{figure}[htp!]
@@ -130,7 +130,7 @@ The same architecure that was used to train CNN1075 was employed on CNN10000, Al
 \label{fig:prob_plot}
 \end{figure}
 
-Figure \ref{fig:CNN_train} show a breakdown of $\mu/\pi$ separation for CNN10000. It also shows the network is not being overtrained due to the Accuracy of both the training and testing datasets being within .01\% of eachother. Figure \ref{fig:prob_plot} shows how well the neural network is doing at $\mu/\pi$ separation with respect to muon probability. The red bins corresponds to true pions and the blue bins correspond to true muons. There is still pion contamination in the high muon probability bins but by choosing a muon probability of $\geq 80\%$ we can reduce this. The CNNs increase in total accuracy can be attributed to an increase in accurately classifying pions as pions as seen in both the confusion matrix in figure \ref{fig:CNN_train} and the large number of events in the zero bin of the muon probability plot seen in figure \ref{fig:prob_plot} that corresponds to high probability pions.   
+Figure \ref{fig:CNN_train} show a breakdown of $\mu/\pi$ separation for CNN10000. It also shows the network is not being over-trained due to the Accuracy of both the training and testing datasets being within .01\% of each-other. Figure \ref{fig:prob_plot} shows how well the neural network is doing at $\mu/\pi$ separation with respect to muon probability. The red bins corresponds to true pions and the blue bins correspond to true muons. There is still pion contamination in the high muon probability bins but by choosing a muon probability of $\geq 80\%$ we can reduce this. The CNNs increase in total accuracy can be attributed to an increase in accurately classifying pions as pions as seen in both the confusion matrix in figure \ref{fig:CNN_train} and the large number of events in the zero bin of the muon probability plot seen in figure \ref{fig:prob_plot} that corresponds to high probability pions.   
 
 
 
@@ -240,28 +240,28 @@ Figure \ref{fig:particleprob} shows the probability of each particle class and t
 \end{figure}
 To see what type of background contamination one would be dealing with when doing muon identification, muon probabilities for each particle class was plotted against the probability of true muons to see how well muon signal vs other particle background separation can be done with CNN100000. Figure \ref{fig:prob} is showing the true muon probability for true muons, versus the rest of the particle classes. This plot describes which muon probability value should be chosen for the least amount of other particle contamination. For electrons and gammas, a muon probability of \sim 75\% would eliminate $e/\gamma$ contamination. For pions and protons, there is contamination at all values of muon probability, but the contamination is drastically reduced at a muon probability $\geq 75\%$.
  
-One of the main concerns with training a neural network was that the features the network would learn to separate muons from poins would be track range, which is what was used to begin with in selection I. To make sure that wasn't the case, the next thing that was looked at was the muon probability versus track range and momentum of the track. Figures \ref{fig:mupi_kinematics} through \ref{fig:mug_kinematics} show the muon probability in blue for all plots against all other particles. A zoomed in version of track range for all particles was also plotted to make sure there is separation between the particles at low track range. The $\mu/\pi$ separation in track range and momentum is less than for $p/e/\gamma$ but that was to be expected. Although the separation isn't as good as the other particles, there still is separation at low momentum and low track range which cannot be done by using a track range cut like selection I does.  
+One of the main concerns with training a neural network was that the features the network would learn to separate muons from pions would be track range, which is what was used to begin with in selection I. To make sure that wasn't the case, the next thing that was looked at was the muon probability versus track range and momentum of the track. Figures \ref{fig:mupi_kinematics} through \ref{fig:mug_kinematics} show the muon probability in blue for all plots against all other particles. A zoomed in version of track range for all particles was also plotted to make sure there is separation between the particles at low track range. The $\mu/\pi$ separation in track range and momentum is less than for $p/e/\gamma$ but that was to be expected. Although the separation isn't as good as the other particles, there still is separation at low momentum and low track range which cannot be done by using a track range cut like selection I does.  
 \begin{figure}[htp]
 \centering
-	\begin{subfigure}[b]{.475\textwidth}
+	\begin{subfigure}[t]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_pi_acc_tracklength_all.pdf}
-		\caption{mupi}
+		\caption{Track range versus muon probability for true muons (blue) and true pions (red).}
 		\label{fig:mupi_tracklength}
 	\end{subfigure}
-	\begin{subfigure}[b]{.475\textwidth}
+	\begin{subfigure}[t]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_pi_acc_tracklength_75.pdf}
-		\caption{mupi75}
+		\caption{Track range $\leq 75$ cm versus muon probability for true muons (blue) and true pions (red).}
 		\label{fig:mupi_tracklength75}
 	\end{subfigure}
-	\begin{subfigure}[b]{.475\textwidth}
+	\begin{subfigure}[t]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_pi_acc_momentum.pdf}
-		\caption{mupi}
+		\caption{Momentum versus muon probability for true muons (blue) and true pions (red).}
 		\label{fig:mupi_momentum}
 	\end{subfigure}
-\caption{}
+\caption{Kinematic distributions versus muon probability for true muons and true pions.}
 \label{fig:mupi_kinematics}
 \end{figure}
 
@@ -270,22 +270,22 @@ One of the main concerns with training a neural network was that the features th
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_p_acc_tracklength_all.pdf}
-		\caption{mup}
+		\caption{Track range versus muon probability for true muons (blue) and true protons (cyan).}
 		\label{fig:mup_tracklength}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_p_acc_tracklength_75.pdf}
-		\caption{mup75}
+		\caption{Track range $\leq 75$ cm versus muon probability for true muons (blue) and true protons (cyan).}
 		\label{fig:mup_tracklength75}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_p_acc_momentum.pdf}
-		\caption{mup}
+		\caption{Momentum versus muon probability for true muons (blue) and true protons (cyan).}
 		\label{fig:mup_momentum}
 	\end{subfigure}
-\caption{}
+\caption{Kinematic distributions versus muon probability for true muons and true protons.}
 \label{fig:mup_kinematics}
 \end{figure}
 
@@ -294,22 +294,22 @@ One of the main concerns with training a neural network was that the features th
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_e_acc_tracklength_all.pdf}
-		\caption{mue}
+		\caption{Track range versus muon probability for true muons (blue) and true electrons (magenta).}
 		\label{fig:mup_tracklength}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_e_acc_tracklength_75.pdf}
-		\caption{mue75}
+		\caption{Track range $\leq 75$ cm versus muon probability for true muons (blue) and true electrons (magenta).}
 		\label{fig:mup_tracklength75}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_e_acc_momentum.pdf}
-		\caption{mue}
+		\caption{Momentum versus muon probability for true muons (blue) and true electrons (magenta).}
 		\label{fig:mup_momentum}
 	\end{subfigure}
-\caption{}
+\caption{Kinematic distributions versus muon probability for true muons and true electrons.}
 \label{fig:mue_kinematics}
 \end{figure}
 
@@ -318,22 +318,22 @@ One of the main concerns with training a neural network was that the features th
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_g_acc_tracklength_all.pdf}
-		\caption{mue}
+		\caption{Track range versus muon probability for true muons (blue) and true gammas (green).}
 		\label{fig:mup_tracklength}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_g_acc_tracklength_75.pdf}
-		\caption{mue75}
+		\caption{Track range $\leq 75$ cm versus muon probability for true muons (blue) and true gammas (green).}
 		\label{fig:mup_tracklength75}
 	\end{subfigure}
 	\begin{subfigure}[b]{.475\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{../csv_output/mu_g_acc_momentum.pdf}
-		\caption{mue}
+		\caption{Momentum versus muon probability for true muons (blue) and true gammas (green).}
 		\label{fig:mup_momentum}
 	\end{subfigure}
-\caption{}
+\caption{Kinematic distributions versus muon probability for true muons and true gammas.}
 \label{fig:mug_kinematics}
 \end{figure}
 
