--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -7,11 +7,13 @@ Neutrinos are fundamental particles which help make up the universe. They are al
 As previously stated, neutrinos are very weakly interacting; in fact, neutrinos can pass unscathed through a wall of lead several hundred light-years thick. Because neutrinos interact so rarely, studying neutrinos requires a massive detector and a powerful neutrino source. With that being said, we can only ``see'' a neutrino when they interact in a detector. In a collision, distinct charged particles are produced with each type of neutrino because of the weak force. An electron neutrino will create an electron, a muon neutrino will create a muon, and a tau neutrino will create a tau. The charged lepton track the particle leaves in the detector is how one figures out what type of neutrino interaction was ``seen''. Liquid Argon Time Projection Chambers are being used to study neutrinos due to their excellent imaging and particle identification capabilities. 
 
 \section{History of Neutrinos}
-The neutrino was first postulated by Wolfgang Pauli in 1931 to explain how beta decay could resolve the conservation of energy, momentum and angular momentum problem. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in latin) in 1933 to fix this confusion. Fermi's paper, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1959 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. In 1962 Leon M. Lenderman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino. The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab. In the late 1960s, many experiments found that the number of electron neutrinos arriving from the sun was around $1/3$ to $1/2$ the number predicted by the Standard Solar Model. This became known as the solar neutrino problem and remained unresolved for around thirty years. This problem was resolved by the discovery of neutrino oscillation and mass.\cite{neutrino}
+The neutrino was first postulated by Wolfgang Pauli in 1931 to explain how to resolve the conservation of energy, momentum and angular momentum problem in beta decay. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in italian) in 1933 to fix this confusion. 
 
+Fermi's paper, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1959 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. 
 
-\section{Neutrino Oscillations}
-Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the phenomenon of a neutrino created with a specific lepton flavor (electron, muon or tau) that is later measured to have a different flavor. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. \cite{neutrinooscillation} 
+In 1962 Leon M. Lenderman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino. 
+
+The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab. In the late 1960s, many experiments found that the number of electron neutrinos arriving from the sun was around $1/3$ to $1/2$ the number predicted by the Standard Solar Model. This became known as the solar neutrino problem and remained unresolved for around thirty years. This problem was resolved by the discovery of neutrino oscillation and mass.\cite{neutrino}
 
 \subsection{Solar Oscillations and the Solar Neutrino Problem}
 
@@ -106,6 +108,10 @@ R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
 Kamiokande-II has the the capability of measuring the direction of the incoming neutrinos. The expectation of atmospheric neutrino detection is that the flux be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed that muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavor oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15km) than coming up from the bottom of the detector(13000km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $sin^2(2\theta)$. Both the solar and atmospheric neutrino problems can be explained by neutrino oscillation so its fitting to derive this phenomenon mathematically. In the next two sections, two flavor and three flavor neutrino oscillation derivations will be explained. 
 
 
+
+\section{Neutrino Oscillations}
+Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the phenomenon of a neutrino created with a specific lepton flavor (electron, muon or tau) that is later measured to have a different flavor. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. \cite{neutrinooscillation} 
+
 \subsection{Two Flavor Neutrino Oscillation Formulation}
 The flavor eigenstates can oscillate between eachother because they are composed of an add-mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavor eigenstates rotated by an angle $\theta$ which is the mixing angle. 
 
@@ -174,7 +180,7 @@ Now applying all these assumptions back into equation \ref{eq:timeevol} gives us
 \centering
 |\nu_{\mu}(t)> = e^{-i \left( p+\frac{1}{2}\frac{m^2_{1}-m^2_{2}}{p} \right) t} \left( -sin\theta|\nu_{1}> + cos\theta|\nu_{2}> \right)
 \end{equation}
- Substituting $\Delta m^2 = m^2_{1}-m^2{2}$ and $t = \frac{x}{c} =x$ and $e^{-iz}= e^{-i \left( p+\frac{1}{2}\frac{m^2_{1}}{p} \right) t}$ gives us:
+ Substituting $\Delta m^2 = m^2_{1}-m^2_{2}$ and $t = \frac{x}{c} =x$ and $e^{-iz}= e^{-i \left( p+\frac{1}{2}\frac{m^2_{1}}{p} \right) t}$ gives us:
  \begin{equation}
  \centering
  |\nu_{\mu}(t)> = e^{-iz} \left( -sin\theta|\nu_{1}> + cos\theta|\nu_{2}>e^{+ix \left(\frac{1}{2}\frac{\Delta m^2}{p}\right)}\right)
@@ -211,7 +217,7 @@ P(\nu_{\mu} \rightarrow \nu_{e}) = sin^{2}2\theta sin^2\left(\frac{\Delta m^2 L}
  
  This equations has three important variables. 
  \begin{itemize}
- \item The angle $\theta$: This angle, as mentioned before, is called the mixing angle. It defines the difference between the flavor and the mass eigenstates. When $\theta = 0$ the mass and flavor eigenstates are identical and now oscillations occur. 
+ \item The angle $\theta$: This angle, as mentioned before, is called the mixing angle. It defines the difference between the flavor and the mass eigenstates. When $\theta = 0$ the mass and flavor eigenstates are identical and no oscillations occur. 
  \item The mass squared difference, $\Delta m^2$: Again $\Delta m^2 = m^2_{1}-m^2_{2}$. The reason this is an important variable is because it implies that for neutrinos to oscillate, neutrinos must have mass. Furthermore, the mass squared difference also tells us that the neutrino mass eigenstates must be different. 
  \item L/E: This is the variable that is of most interest to experimental physicists due to the fact that it is the variable that we set. L is the distance between the source and detector and E is the energy of the neutrino. For a given $\Delta m^2$, the probability of oscillation changes with respect to L/E. 
  \end{itemize}
