--- a/example.tex
+++ b/example.tex
@@ -55,6 +55,7 @@
 %% Start the document
 \begin{document}
 
+\let\cleardoublepage\clearpage
 \begin{frontmatter}
 \begin{center}
 \vspace*{0.2cm}
@@ -91,8 +92,8 @@ Syracuse, New York
 
 \end{center}
 %\setcounter{page}{2}
-\thispagestyle{empty}
-\clearpage
+%\thispagestyle{empty}
+%\clearpage
 
 \vspace*{5cm}
 \begin{center}
@@ -101,7 +102,7 @@ Syracuse, New York
     All Rights Reserved\\
     Syracuse University\\
 \end{center}
-\thispagestyle{empty}
+%\thispagestyle{empty}
 %\setcounter{page}{3}
 
  \input{seals}
