--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -102,7 +102,7 @@ R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
 \centering
 \caption{Measurments of the double ratio for various atmospheric neutrino experiments}
 \label{fig:ratiotable}
-\resizebox{\textwidth}{!}{\begin{tabular}{c c c}
+\resizebox{0.7\textwidth}{!}{\begin{tabular}{c c c}
 \hline
 Experiment & Type of experiment & R\\
 \hline
@@ -122,7 +122,7 @@ Kamiokande-II has the capability of measuring the direction of the incoming neut
 Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the phenomenon of a neutrino created with a specific lepton flavor (electron, muon or tau) that is later measured to have a different flavor. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. \cite{neutrinooscillation} 
 
 \subsection{Two Flavor Neutrino Oscillation Formulation}
-The flavor eigenstates can oscillate between eachother because they are composed of an add-mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavor eigenstates rotated by an angle $\theta$ which is the mixing angle. 
+The flavor eigenstates can oscillate between each other because they are composed of an add mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavor eigenstates rotated by an angle $\theta$ which is the mixing angle. 
 
 In matrix form the wavefunctions are:
 
@@ -254,10 +254,26 @@ Following the same steps as before we get:
 P_{\alpha \rightarrow \beta}= \delta_{\alpha \beta} - 4 \Sigma Re(U^{*}_{\alpha i} U_{\beta i} U{\alpha j} U^{*}_{\beta j})sin^{2}\left(\frac{\Delta m^{2}_{ij} L}{4E}\right) 2 \Sigma Im(U^{*}_{\alpha i} U_{\beta i} U{\alpha j} U^{*}_{\beta j})sin\left(\frac{\Delta m^{2}_{ij} L}{2E}\right)
 \end{equation}
 
-The main things to notice here are $\delta_{ij}$ which is the CP violating term and has not been measured yet, and $\theta_{13}$ which has just been measured. CP violation is a violation of the postulated CP-symmetry. CP-symmetry states that the laws of physics should be the same if a particle were to be exchanged with its antiparticle and then if the left hand side of a decay were switched with the right hand side. 
+The main things to notice here are $\delta_{ij}$ which is the CP violating term and has not been measured yet, and $\theta_{13}$ which has just been measured. CP violation is a violation of the postulated CP-symmetry. CP-symmetry states that the laws of physics should be the same if a particle were to be exchanged with its antiparticle and then if the left hand side of a decay were switched with the right hand side. Table \ref{table:measurements} shows the current world knowledge of the values of all the fundamental parameters for neutrino oscillations \cite{pdg}. 
+\begin{table}[htp!]
+\centering
+\caption{Current world knowledge of neutrino oscillation parameters \cite{pdg}}
+\label{table:measurements}
+\resizebox{0.5\textwidth}{!}{\begin{tabular}{c c}
+\hline
+Parameter & Value\\
+\hline
+$\theta_{12}$ & $33.9 \pm 1.0^\circ$\\
+$\theta_{23}$ & $39^\circ < \theta_{23} < 51^\circ$\\
+$\theta_{13}$ & $9.1 \pm 0.6^\circ$\\
+$\Delta m^2_{21}$ & $(7.50 \pm 0.20)*10^{-5} \text{eV}^2$\\
+$|\Delta m^2_{32}|$ & $(2.32^{+0.12}_{-0.08})*10^{-3} \text{eV}^2$\\
+$\delta_{cp}$ & unknown\\
+\end{tabular}}
+\end{table}
 
-\subsection{Reactor Oscillation}
-Many experiments have searched for oscillation of electron anti-neutrinos produced at nuclear reactors. Such oscillations give the value of the parameter $\theta_{13}$. The KamLAND experiment, started in 2002, has made a high precision observation of reactor neutrino oscillation. Neutrinos produced in nuclear reactors have energies similar to solar neutrinos, a few MeV. The baselines of these experiments have ranged from tens of meters to over 100 km. On 8 March 2012, the Daya Bay team announced a 5.2$\sigma$ discovery that $\theta_{13}\neq 0$. %Two other experiments are currently measuring reactor neutrino oscillation (at the same baseline of a few kilometers) and may eventually confirm the Daya Bay results: Double Chooz and RENO.
+%\subsection{Reactor Oscillation}
+%Many experiments have searched for oscillation of electron anti-neutrinos produced at nuclear reactors. Such oscillations give the value of the parameter $\theta_{13}$. The KamLAND experiment, started in 2002, has made a high precision observation of reactor neutrino oscillation. Neutrinos produced in nuclear reactors have energies similar to solar neutrinos, a few MeV. The baselines of these experiments have ranged from tens of meters to over 100 km. On 8 March 2012, the Daya Bay team announced a 5.2$\sigma$ discovery that $\theta_{13}\neq 0$. %Two other experiments are currently measuring reactor neutrino oscillation (at the same baseline of a few kilometers) and may eventually confirm the Daya Bay results: Double Chooz and RENO.
 
 
 %\section{Beam Oscillation}
