--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -60,11 +60,9 @@ The solution to the solar neutrino problem was finally experimentally determined
 \caption{Solar Neutrino Experiments}
 \label{fig:solarexperiments}
 \end{figure}
-\begin{comment}
-\subsubsection{MSW Effect}
-The Mikheyev-Smirnov-WOlfenshein effect is a process which acts to modify neutrino oscillations in matter. The presence of electrons in matter changes the energy levels of the mass eigenstates of neutrinos due to charged current coherent forward scattering of the electron neutrinos. This coherent forward scattering is similar to the electromagnetic process with respect to the refractive index of light in a medium. Because of this MSW Effect, neutrinos in vacuum have a different effective mass than neutrinos in matter and because neutrino oscillations depend on the squared mass difference of the neutrinos, the neutrino oscillations are different in matter than in vacuum. This effect is important at the sun where electron neutrinos are produced. The neutrinos of high energy leaving the sun are in a vacuum propagation eigenstate $\nu_{2}$ that has a very small overlap with the electron neutrino $\nu_{e}=\nu_{1}cos(\theta)+\nu_{2}sin(\theta)$ seen by the charged current reactions in Kamiokande-II and SNO. The discrepancy of the deficit between SNO, Kamiokande-II and Homestake is due to the energy of the solar neutrinos. The MSW effect "turns on" at about 2 MeV and at lower energies, this MSW effect is negligible. \cite{Smirnov:2003da}
-\end{comment}
 
+%\subsubsection{MSW Effect}
+%The Mikheyev-Smirnov-WOlfenshein effect is a process which acts to modify neutrino oscillations in matter. The presence of electrons in matter changes the energy levels of the mass eigenstates of neutrinos due to charged current coherent forward scattering of the electron neutrinos. This coherent forward scattering is similar to the electromagnetic process with respect to the refractive index of light in a medium. Because of this MSW Effect, neutrinos in vacuum have a different effective mass than neutrinos in matter and because neutrino oscillations depend on the squared mass difference of the neutrinos, the neutrino oscillations are different in matter than in vacuum. This effect is important at the sun where electron neutrinos are produced. The neutrinos of high energy leaving the sun are in a vacuum propagation eigenstate $\nu_{2}$ that has a very small overlap with the electron neutrino $\nu_{e}=\nu_{1}cos(\theta)+\nu_{2}sin(\theta)$ seen by the charged current reactions in Kamiokande-II and SNO. The discrepancy of the deficit between SNO, Kamiokande-II and Homestake is due to the energy of the solar neutrinos. The MSW effect "turns on" at about 2 MeV and at lower energies, this MSW effect is negligible. \cite{Smirnov:2003da}
 
 \subsection{Atmospheric Oscillations and the Atmospheric Neutrino Anomaly}
 Atmospheric neutrinos are neutrinos that stem from the decay hadrons coming from primary cosmic rays. The dominant part of the decay chain is shown in equations  \ref{eq:piplus} and \ref{eq:piminus}
@@ -272,6 +270,9 @@ $\delta_{cp}$ & unknown\\
 \end{tabular}}
 \end{table}
 
+\section{Neutrino Interactions}
+\subsection{Weak Interactions}
+\subsection{Neutrino-Nucleon Interactions}
 %\subsection{Reactor Oscillation}
 %Many experiments have searched for oscillation of electron anti-neutrinos produced at nuclear reactors. Such oscillations give the value of the parameter $\theta_{13}$. The KamLAND experiment, started in 2002, has made a high precision observation of reactor neutrino oscillation. Neutrinos produced in nuclear reactors have energies similar to solar neutrinos, a few MeV. The baselines of these experiments have ranged from tens of meters to over 100 km. On 8 March 2012, the Daya Bay team announced a 5.2$\sigma$ discovery that $\theta_{13}\neq 0$. %Two other experiments are currently measuring reactor neutrino oscillation (at the same baseline of a few kilometers) and may eventually confirm the Daya Bay results: Double Chooz and RENO.
 
